--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true?characterEncoding=UTF-8?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=user
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch?useUnicode=true?characterEncoding=UTF-8?useTimezone=true&serverTimezone=UTC
+#spring.datasource.username=user
+#spring.datasource.password=123456
+#spring.batch.initialize-schema=always
+spring.datasource.url=jdbc:h2:tcp://localhost/~/mydb
+spring.datasource.username=thiago
+spring.datasource.password=1234
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.batch.initialize-schema=always
